Kubernetes/Azure/configure/examples/hpa-sim/hpasim.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hpa-sim
  labels:
    istio-injection: enabled
    ns: hpa-sim
---
apiVersion: networking.istio.io/v1beta1
kind: Sidecar
metadata:
  name: default
  namespace: hpa-sim
spec:
  egress:
  # Limit the possible egress targets to this collection. Only these are exported 
  # to the sidecar. It is advised to limit the hosts in large clusters to improve 
  # the performance since not all hosts are relevant for this workload.
  - hosts:
    - "./*"
    - "istio-system/*"
---
# Do NOT allow any outgoing connections by default that are not the following target:
# - istio-system for lookups (certs, etc.)
# - istio-egressgateway (outgoing connections if any)
# - kubernetes dns
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-to-istio-and-kube-dns
  namespace: hpa-sim
spec:
  podSelector: {}
  policyTypes:
  - Egress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          ns: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
  - to:
    - namespaceSelector:
        matchLabels:
          ns: istio-system
  - to:
    - namespaceSelector:
        matchLabels:
          ns: istio-egress
      podSelector:
        matchLabels:
          istio: egressgateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hpa-sim
  namespace: hpa-sim
  labels:
    app: hpa-sim
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hpa-sim
      version: v1
  template:
    metadata:
      labels:
        app: hpa-sim
        version: v1
      annotations:
        prometheus.io/scrape: "true"   # Determines if a pod should be scraped. Set to true to enable scraping.
        prometheus.io/path: "/metrics" # Determines the path to scrape metrics at. Defaults to /metrics.
        prometheus.io/port: "8080"     # Determines the port to scrape metrics at. Defaults to 80.
        sidecar.istio.io/rewriteAppHTTPProbers: "false" # Determines if the kubernetes http probes should be rewritten or not.
    spec:
      serviceAccountName: hpa-sim
      containers:
      - name: hpa-sim
        image: euexample00.azurecr.io/hpa-sim
        imagePullPolicy: Always # IfNotPresent
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: hpa-sim
  namespace: hpa-sim
  labels:
    app: hpa-sim
spec:
  ports:
  - name: http
    port: 8080
  selector:
    app: hpa-sim
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: hpa-sim
  namespace: hpa-sim
spec:
  # Do NOT set the "exportTo" key here since the Gateway resource
  # must be able to see the service. By default all virtual services,
  # service entries and destination rules are globally visible.
  hosts:
  - eu-example-01.westeurope.cloudapp.azure.com
  - hpa-sim.hpa-sim.svc.cluster.local
  gateways:
  - istio-ingress/default-gateway
  - mesh
  http:
  - name: "hpa-sim-endpoint"
    match:
    - uri:
        prefix: "/hpa-sim"
    - uri:
        prefix: "/hpa-sim/"
    rewrite:
      uri: "/"
    route:
    - destination:
        port:
          number: 8080
        host: hpa-sim.hpa-sim.svc.cluster.local
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: hpa-sim
  namespace: hpa-sim
spec:
  selector:
    matchLabels:
      app: hpa-sim
      version: v1
  action: ALLOW
  rules:
  # Prometheus scraping.
  - from:
    - source:
        principals: ["cluster.local/ns/prometheus-stack/sa/prometheus-stack-kube-prom-prometheus"]
        namespaces: ["prometheus-stack"]
    to:
    - operation:
        methods: ["GET"]
        paths: ["/metrics"]
        ports: ["8080"]
  # Default ingress.
  - from:
    - source:
        namespaces: ["istio-ingress"]
    to:
    - operation:
        methods: ["GET", "POST", "PUT", "DELETE"]
